<resources>
    <string name="app_name">FG_App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_logo">Modern</string>
    <string name="title_login">Login With Email Office365</string>
    <string name="office365">Office365</string>
    <string name="title_login_or">OR</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="messageConnectToServe">Đang kết nối đên Server, Vui lòng chờ</string>
    <string name="errorEmail">Bạn cần nhập đúng địng dạng Email</string>
    <string name="errorPassword">Độ dài mật khẩu cần 6 đến 12 kí tự</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="LCDoan">Liên chi đoàn</string>
    <string name="title_Contact">FGDev Contact</string>
    <string name="title_github">Github</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_hoatdong">Tạo hoạt động</string>
    <string name="title_desc">Mô tả:</string>
    <string name="title_type">Loại:</string>
    <string name="title_hocky">Học kỳ:</string>
    <string name="title_end">Kết thúc:</string>
    <string name="title_start">Bắt đầu:</string>
    <string name="name_hoatdong">Tên hoạt động</string>
    <string name="connect_to_server">Đang kết nối đến server</string>
    <string name="addHoatDong">Thêm hoạt động</string>
    <string name="share_hoatdong">shareHoatDong</string>
    <string name="checkin">Điểm danh</string>
    <string name="check_in_success">diểm danh thành công</string>
    <string name="joined">đã tham gia</string>
    <string name="not_update_yet">chưa cập nhật</string>
    <string name="full_name">Họ và tên :</string>
    <string name="gender">Giới tính :</string>
    <string name="date_of_birth">Ngày sinh :</string>
    <string name="phone_number">Số điện thoại :</string>
    <string name="address">Địa chỉ :</string>
    <string name="classes">Lớp :</string>
    <string name="info">Thông tin cá nhân</string>
    <string name="created_by_fgdev">Created by: FGDev</string>
    <string name="version">Version: </string>
    <string name="share_view">share_view</string>
    <string name="your_email_address">Your email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="log_out">Đăng xuất</string>
    <string name="about">Giới thiệu</string>
    <string name="get_id_error">Get ID from intent error</string>
    <string name="transition_joined">transition_joined</string>
    <string name="store_hoatdong_success">Tạo hoạt động thành công!</string>
    <string name="created_success">được tạo thành công!</string>
    <string name="ok">Ok</string>
    <string name="required">Cần phải có</string>
    <string name="title_create_hoatdong">Tạo hoạt đông</string>
    <string name="coming_hoatdong">Hoạt động sắp diễn ra</string>
    <string name="coming">Sắp diễn ra</string>
    <string name="finish">Đã diễn ra</string>
</resources>
