<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashActivity">

    <LinearLayout
        android:id="@+id/splash.logo.layout"
        android:transitionName="@string/share_view"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_margin="@dimen/margin_default"
            android:src="@drawable/logo_hueic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_margin="@dimen/margin_default"
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/app.title"
        android:layout_below="@id/splash.logo.layout"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font_size_24"
        android:textColor="@color/colorBlack"
        android:text="Hueic FG YouthUnion App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="@dimen/margin_default"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorDarkGray"
        android:text="@string/created_by_fgdev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/splah.version"
        android:layout_margin="@dimen/margin_default"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>