<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:transitionName="@string/share_hoatdong"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.storehoatdong.StoreHoatDongActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/padding_default"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/store_hoatdong_ed_name"
                android:hint="@string/name_hoatdong"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/padding_default"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/bg_edt_title_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_start"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/store_hoatdong_txt_start"
                    android:text="13/05/1998"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
                android:id="@+id/store_hoatdong_collapsing_start"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                app:textColor="@color/colorWhite"
                app:primaryColor="@color/colorPrimary"
                app:selectedItem_textColor="@color/colorWhite"
                app:buttonLeft_drawableTintColor="@color/colorWhite"
                app:buttonRight_drawableTintColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_end"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/store_hoatdong_txt_end"
                    android:text="13/05/1998"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
                android:id="@+id/store_hoatdong_collapsing_end"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                app:textColor="@color/colorWhite"
                app:primaryColor="@color/colorPrimary"
                app:selectedItem_textColor="@color/colorWhite"
                app:buttonLeft_drawableTintColor="@color/colorWhite"
                app:buttonRight_drawableTintColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_type"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/store_hoatdong_sp_type"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:text="@string/title_desc"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/store_hoatdong_ed_desc"
                android:layout_margin="@dimen/margin_default"
                android:minLines="6"
                android:padding="@dimen/padding_default"
                android:gravity="top"
                android:textSize="12sp"
                android:hint="Mô tả..."
                android:background="@drawable/bg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/store_hoatdong_btn_create"
                android:text="@string/create_hoatdong"
                android:textColor="@color/colorBlack"
                android:textAllCaps="false"
                android:background="@drawable/bg_button"
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>