<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_collapseMode="pin"
        android:background="#b027f25e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebca0707"
        android:elevation="4dp"
        android:paddingBottom="24dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:clickable="true"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFFFF"
            android:layout_centerVertical="true"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_toRightOf="@+id/img_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/not_update_yet"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_user_email"
            android:layout_toRightOf="@id/img_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/not_update_yet"
            android:textColor="#fff"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/profile_layout"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/full_name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_user_full_name"
                android:text="@string/not_update_yet"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/gender"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_user_gender"
                android:text="@string/not_update_yet"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/date_of_birth"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_user_date"
                android:text="@string/not_update_yet"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/phone_number"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_user_phone"
                android:text="chưa cập nhật"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/address"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_user_address"
                android:text="@string/not_update_yet"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_default"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/classes"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/txt_user_class"
                android:text="@string/not_update_yet"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/user_progress"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp" />
</RelativeLayout>